cicd modify test

--- a/nodejs-sample-pipeline.yaml
+++ b/nodejs-sample-pipeline.yaml
@@ -6,7 +6,7 @@ spec:
   strategy:
     jenkinsPipelineStrategy:
       jenkinsfile: |-
-        // path of the template to use
+        // path of the template to use test!!!
         def templatePath = 'https://raw.githubusercontent.com/openshift/nodejs-ex/master/openshift/templates/nodejs-mongodb.json'
         // name of the template that will be created
         def templateName = 'nodejs-mongodb-example'
